tests-integration/fixtures/checking/025_role_declaration_loosen_error/Main.snap
---
source: tests-integration/tests/checking2/generated.rs
assertion_line: 28
expression: report
---
Terms
F ::
  forall (t2 :: Type) (@f :: (t2 :: Type) -> Type) (@a :: (t2 :: Type)).
    (f :: (t2 :: Type) -> Type) (a :: (t2 :: Type)) ->
    F @(t2 :: Type) (f :: (t2 :: Type) -> Type) (a :: (t2 :: Type))

Types
F :: forall (t2 :: Type). ((t2 :: Type) -> Type) -> (t2 :: Type) -> Type

Roles
F = [Representational, Nominal]

Diagnostics
error[InvalidRoleDeclaration]: Invalid role declaration: declared Phantom, inferred Nominal
  --> 3:1..3:21
  |
3 | data F f a = F (f a)
  | ^~~~~~~~~~~~~~~~~~~~
